--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
+    "react-router-dom": "6.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
